css/main.css
body {
    background-color: #4F5C4B !important;
    color: white !important;
    font-family: Apercu,"Source Sans Pro",system,system-ui,Helvetica,Arial,sans-serif;
}

.jumbotron {
    background-color: #EBE8D4;
    color: #4F5C4B;
    position: relative;
    overflow: hidden;
}

.projectsSection{
    background-color: whitesmoke;
    color: #4F5C4B;
    padding-top: 10%;
    padding-bottom: 10%;
    font-size: 14px;
    padding-right: 10%;
}

a {
    color: white;
}
a:hover {
    color: #14e0eb3b;
}
h1 {
    text-align: center;
    color: white;
}
p {
    font-size: 14px;
}

.introPic{
    width: 100%;
    max-width: 250px;
    height: auto;
}

/*Top Nav Bar*/
.links-nav-bar {
    background-color: #4F5C4B !important;
    color: white !important;
}

.navbar {
    margin-bottom: 0;
    padding-right: 2%;
    background-color: white;
    color: #4F5C4B;
    border: 0;
    align-items: center;
    min-height: 0px;
    display: flex;
    border-radius: 0px;
}

.navbar-icons{
    display: block;
    text-align: right;
}

.navbar-nav {
    display: flex;
    align-items: center;
    margin: 0;
    padding: 0;
    margin-left: auto; /* Moves the icons to the right side */
}

.navbar-nav li {
    list-style: none;
    margin: 0 10px;
}

.navbar-nav li a {
    display: inline-flex;
    align-items: center;
    justify-content: center;
    padding: 0;
}

.nav-icon img {
    width: 28px;
    height: 28px;
    display: inline-block;
    vertical-align: middle;
}

.top-header{
    margin-bottom: 0;
}

/* Footer */
footer {
    background-color: #4F5C4B;
    padding-top: 5px;
    line-height: 1.428;
    padding-bottom: 5px;
    margin-top: 0;
}
.footerul {
    padding: 10px;
    list-style: none;
    display: inline;
    text-decoration: none;
}
footer ul {
    padding: 0;
    margin: 0;
}
footer ul li{
    padding: 10px;
    list-style: none;
    display: inline;
    text-decoration: none;
}
footer ul li:hover {
    text-decoration: none;
    color: white;
}

.left-text{
    text-align: left;
    display: inline-block; 
}

.mountain_img {
    width: 100%;
    height: auto;
    max-height: 100%;
    object-fit: contain;
}
.left-section{ 
    z-index: 1;
    float: left;
    width: 50%;
    text-align: center;
    position: relative;
    align-items: center; /* Vertically center */
}
.right-section {
    z-index: 1;
    float: right;
    width: 50%;
    position: relative;
    display: flex;
    align-items: center; /* Vertically center */
    justify-content: center; /* Horizontally center */
    max-height: 100vh;
}
.center-section {
    position: absolute;
    top: 50%;
    left: 75%;
    transform: translate(-50%, -50%);
    z-index: 3;
}
.content-wrapper {
    display: flex;
    width: 100%;
}

.resume{
    margin: 5%;
}

.yellow-background{
    background-color: #EBE8D4;
}

/*Resume Download Button*/
.emailBttnTxt, .emailBttnTxt:hover{
    background-color: #4F5C4B;
    color: white;
    text-decoration: none;
}
.resumeButton {
    background-color: #4F5C4B;
    color: white;
    padding: 10px 22px;
    text-align: center;
    display: inline-block;
    border-radius: 4px;
}
.resumeButton:hover {
    background-color: #768672;
    color: rgb(178, 175, 175);
}

.download-resume-button{
    background-color: #EBE8D4;
    color: #4F5C4B;
    padding: 10px 22px;
    text-align: center;
    display: inline-block;
    border-radius: 4px;
}

.download-resume-button:hover {
    background-color: #768672;
    color: #4F5C4B;
}


/*Language Cubes*/
.languageCube{
    background-color: #4F5C4B;
    text-align: center;
    padding: 2px 7px;
    color: white;
    text-decoration: none;
    display: inline-block;
    margin: 3px 3px 3px 0;
}

/*Column Header Title*/
.sectionHeader{
    vertical-align: top;
    color: #4F5C4B;
    font-weight:normal;
}

